--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>{{ site.title }}{% if page.title and page.title != "" %} &mdash; {{ page.title }}{% endif %}</title>
-
-    {% if site.description %}<meta name="description" content="{{ site.description }}">{% endif %}  
-
+  
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | absolute_url }}?{{ site.time | date: '%s%N' }}">
 
     <link rel="apple-touch-icon" href="{{ site.icon }}">
@@ -17,6 +13,56 @@
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
       {%- include google-analytics.html -%}
     {%- endif -%}
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@{{ site.twitter_username }}" />
+    {% capture twitter_image %}
+      {% if page.twitter_image %}
+        {{ page.twitter_image }}
+      {% else %}
+        {{ site.real_url }}/{{ site.twitter_image }}
+      {% endif %}
+    {% endcapture %}
+    <meta name="twitter:image" content="{{ twitter_image | strip }}"/>
+    <meta property="og:image" content="{{ twitter_image | strip }}"/>
+
+    {% capture page_title %}
+    {% if page.layout == 'default' %}
+      {{site.title}} - {{site.description}}
+    {% else %}
+      {{ page.title }} - {{site.title}}
+    {% endif %}
+  {% endcapture %}
+
+  <meta name="twitter:title" content="{{ page_title | strip }}"/>
+  <meta property="og:title" content="{{ page_title | strip }}"/>
+  <meta name="title" content="{{ page_title | strip }}"/>
+  <title>{{page_title | strip}}</title>
+    
+  {% capture page_description %}
+    {% if page.layout == 'default' %}
+      {{site.long_description}}
+    {% else %}
+      {% if page.description %}
+        {{ page.description | strip_html | strip_newlines | truncate: 200 }}
+      {% else %}
+        {{ page.content | strip_html | strip_newlines | truncate: 200 }}
+      {% endif %}
+    {% endif %}
+  {% endcapture %}
+
+  <meta name="twitter:description" content="{{page_description | strip }}">
+  <meta name="description" content="{{page_description | strip }}">
+  <meta property="og:description" content="{{page_description | strip }}">
+
+
+  {% if page.layout == 'default' %}
+    <meta name="author" content="{{site.name}}">
+    <meta property="og:type" content="website" />
+  {% else %}
+    <meta name="author" content="{% if page.author %}{{ page.author | escape }}{% else %}{{ site.name }}{% endif %}">
+    <meta property="og:type" content="article" />
+  {% endif %}
 
   </head>
   <body>
